@@ -66,7 +66,7 @@
             <CompilerMessages>
               <IgnoredMessages idx5058="True" idx5027="True"/>
             </CompilerMessages>
-            <CustomOptions Value="-dOPSIWINST -dWINDOWS -dOPSISCRIPT -dGUI"/>
+            <CustomOptions Value="-dOPSIWINST -dWINDOWS -dOPSISCRIPT -dGUI -dOSDEBUG"/>
           </Other>
         </CompilerOptions>
       </Item2>
